docs/_static/css/custom.css
/* ================================================================== */
/* Layout                                                             */
/* ================================================================== */

@media (min-width: 1200px) {
    .wy-nav-content {
        max-width: 1000px;
        padding-left: 20px !important;
    }
}

/* ================================================================== */
/* Navigation                                                         */
/* ================================================================== */

/* hide top navigation, keep footer navigation */
.rst-content > div[role="navigation"] {
    display: none;
}

footer div[role="navigation"][aria-label="Footer"] {
    display: block;
}

/* ================================================================== */
/* Sidebar                                                            */
/* ================================================================== */

.wy-side-nav-search {
    background-color: grey !important
}

/* ================================================================== */
/* Headings                                                           */
/* ================================================================== */

h1, h2, h3 {
    background: #eee;
    padding: 5px;
    border-bottom: 1px solid #ccc;
}

h1 {
    font-size: 35px;
}

/* ================================================================== */
/* Tables                                                             */
/* ================================================================== */

.wy-table-responsive table thead {
    background-color: #eeeeee;
}

.document th {
    padding: 4px 8px !important;
    font-weight: 600;
}

.document th p {
    margin-bottom: 0px !important;
}

.document td {
    padding: 4px 8px !important;
}

.document td p {
    margin-bottom: 0px !important;
}

/* "longtable" class (used by alternatives.rst): fixed layout
   with extra padding for multi-line cells */
.wy-table-responsive table.longtable {
    table-layout: fixed;
    width: 100%;
}

.wy-table-responsive table.longtable th,
.wy-table-responsive table.longtable td {
    padding: 10px !important;
    white-space: normal !important;
    word-wrap: break-word;
}

/* adoption page logos */
.document td img[alt$="-logo"] {
    height: 20px !important;
    width: 20px !important;
    vertical-align: middle;
}

/* ================================================================== */
/* Lists                                                              */
/* ================================================================== */

.rst-content ul {
    margin-top: 0px !important;
}

.rst-content ul p {
    margin-bottom: 0px !important;
}

.rst-content li {
    list-style: outside;
    margin-left: 15px;
}

/* ================================================================== */
/* API signatures                                                     */
/* ================================================================== */

.rst-content dl:not(.docutils) {
    margin: 0px 0px 0px 0px !important;
}

.rst-content dl:not(.docutils) dt {
    color: #555;
}

.data dd {
    margin-bottom: 0px !important;
}

.data .descname {
    border-right:10px !important;
}

.function .descclassname,
.class .descclassname {
    font-weight: normal !important;
}

.sig-paren {
    padding-left: 2px;
    padding-right: 2px;
}

/* ================================================================== */
/* Code blocks                                                        */
/* ================================================================== */

/* reduce bottom margin of code blocks inside list items */
.rst-content li > div[class^='highlight'] {
    margin-bottom: 6px !important;
}

pre {
    padding: 5px !important;
}

.highlight {
    background: #eeffcc;
}

.highlight .hll {
    background-color: #ffffcc
}

.highlight .c {
    color: #408090;
    font-style: italic
}

.codeblock div[class^='highlight'],
pre.literal-block div[class^='highlight'],
.rst-content .literal-block div[class^='highlight'],
div[class^='highlight'] div[class^='highlight'] {
    background-color: #eeffcc !important;
}

/* ================================================================== */
/* Links                                                              */
/* ================================================================== */

/* external links: dotted underline (except intersphinx and image links) */
a.reference.external:not([href*="docs.python.org"]):not(:has(img)) {
    text-decoration: underline dotted;
}

a.reference.external:not([href*="docs.python.org"]):not(:has(img)):hover {
    text-decoration: underline solid;
}

a.external[href^="#"] {
    text-decoration: none;
    color: inherit;
}

/* ================================================================== */
/* Admonitions (note, warning, tip) - styled like python doc          */
/* ================================================================== */

div.admonition {
    margin-top: 10px !important;
    margin-bottom: 10px !important;
}

div.warning {
    background-color: #ffe4e4 !important;
    border: 1px solid #f66 !important;
    border-radius: 3px !important;
}

div.note,
div.important {
    background-color: #eee !important;
    border: 1px solid #ccc !important;
    border-radius: 3px !important;
}

div.tip {
    background-color: #dfd !important;
    border: 1px solid green !important;
    border-radius: 3px !important;
}

div.admonition p.admonition-title + p {
    display: inline !important;
}

p.admonition-title {
    display: inline !important;
    background: none !important;
    color: black !important;
}

p.admonition-title:after {
    content: ":" !important;
}

/* hide admonition icons */
.fa-exclamation-circle:before,
.wy-inline-validate.wy-inline-validate-warning .wy-input-context:before,
.wy-inline-validate.wy-inline-validate-info .wy-input-context:before,
.rst-content .admonition-title:before {
    display: none !important;
}

.admonition.warning {
    padding-top: 5px !important;
    padding-bottom: 5px !important;
}

.admonition.warning p {
    margin-bottom: 5px !important;
}

.admonition.note,
.admonition.important {
    padding-top: 5px !important;
    padding-bottom: 5px !important;
}

.admonition.note p,
.admonition.important p {
    margin-bottom: 5px !important;
}

.note code,
.important code {
    background: #d6d6d6 !important;
}

/* ================================================================== */
/* Version directives (versionadded / versionchanged / deprecated)    */
/* ================================================================== */

div.versionadded,
div.versionchanged,
div.deprecated {
    border-left: 3px solid;
    padding: 0 1rem;
}

div.versionadded {
    border-left-color: rgb(79, 196, 100);
}

div.versionchanged {
    border-left-color: rgb(244, 227, 76);
}

div.deprecated {
    border-left-color: rgb(244, 76, 78);
}

div.versionadded .versionmodified {
    color: rgb(41, 100, 51);
}

div.versionchanged .versionmodified {
    color: rgb(133, 72, 38);
}

div.deprecated .versionmodified {
    color: rgb(159, 49, 51);
}

